fix(tabs): make md-tab-label visible on IE11
Closes #1057.

--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -138,7 +138,7 @@ md-tab {
   }
 
   md-tab-label {
-    flex: 1;
+    flex: 1 1 auto;
     z-index: 100;
     opacity: 1;
     overflow: hidden;
